# moire

./: moire.cabal  readme.md
src/: Main.hs  Moire.hs
test/: Test.hs
