name:                moire
version:             0.1.0.0
synopsis:            Calculate 1d moire patterns
description:         Please see README.md
homepage:            https://github.com/expipiplus1/moire
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          moire@monoid.al
copyright:           2017 Joe Hermaszewski
category:            Web
build-type:          Simple
extra-source-files:  default.nix shell.nix pkgs.nix haskell-packages.nix
cabal-version:       >=1.10

executable moire
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , QuickCheck
                     , extra
                     , safe
                     , boxes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/moire
